# TDPriklady

./: README.md  pyproject.toml  requirements.txt
priklady_rankine_cycle/: rc_smesovaci_bez_prihrevu.ipynb  rc_smesovaci_prihrev.ipynb  rc_vymenik_bez_prihrevu.ipynb  rc_vymenik_prihrev.ipynb
priklady_sbirka/: G1.ipynb  G1_CoolProp.ipynb  G2.ipynb  G3.ipynb  G4.ipynb  G5.ipynb  G6.ipynb
