[project]
name = "tdpriklady"
version = "0.1.0"
description = "Sbirka prikladu k predmetu termodynamika vyucovanem na FS CVUT Praha."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coolprop>=6.8.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyfluids>=2.8.1",
    "scipy>=1.16.2",
]
